--- a/HotelGarage/Views/Reservations/List.cshtml
+++ b/HotelGarage/Views/Reservations/List.cshtml
@@ -49,15 +49,15 @@
             <th>Jméno</th>
             <th>Příjezd</th>
             <th>Odjezd</th>
-            <th>Číslo Pokoje</th>
-            <th>Celková Cena</th>
-            <th>Stav Rezervace</th>
+            <th>Pokoj</th>
+            <th>Celk. Cena</th>
+            <th>Rezervace</th>
             <th>SPZ</th>
             <th>Typ Auta</th>
-            <th>Parkovací Místo</th>
+            <th>Park. Místo</th>
             <th>Zaměstnanec</th>
-            <th>Celk. Počet Návštěv</th>
-
+            <th>Návštěv</th>
+            <th>Úpravy</th>
         </tr>
     </thead>
     <tbody>
@@ -75,6 +75,7 @@
             <td>@res.ParkingPlaceName</td>
             <td>@res.IsEmployee</td>
             <td>@res.NumberOfStays</td>
+            <td>uprav / smaž</td>
         </tr>
         }
     </tbody>
@@ -83,14 +84,15 @@
             <th>Jméno</th>
             <th>Příjezd</th>
             <th>Odjezd</th>
-            <th>Číslo Pokoje</th>
-            <th>Celková Cena</th>
-            <th>Stav Rezervace</th>
+            <th>Pokoj</th>
+            <th>Celk. Cena</th>
+            <th>Rezervace</th>
             <th>SPZ</th>
             <th>Typ Auta</th>
-            <th>Parkovací Místo</th>
+            <th>Park. Místo</th>
             <th>Zaměstnanec</th>
-            <th>Celk. Počet Návštěv</th>
+            <th>Návštěv</th>
+            <th>Úpravy</th>
         </tr>
     </tfoot>
 </table>
