--- a/HotelGarage/Content/site.less
+++ b/HotelGarage/Content/site.less
@@ -38,16 +38,16 @@ label {
 
 
 /* custom classes */
-.alert-prijezd {
+.alert-arrival {
     width: 180px;
 }
 
-.odkaz-prijezd {
+.link-arrival {
     color: #533f03;
     font-size: 20px;
 }
 
-.parkovaciMistoPrazdne {
+.emptyParkingPlace {
     width: 180px;
 }
 
