--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -213,7 +213,7 @@
                         <div class="row alert alert-danger">
                             <div class="alert-prijezd">
                                 SPZ: @reservation.CarLicensePlate<br />
-                                <div class="js-pPlacePrijezd">Místo: @reservation.ParkingPlaceName<br /></div>
+                                <div class="js-parkingPlacePrijezd">Místo: @reservation.ParkingPlaceName<br /></div>
                                 Host: @reservation.CarGuestsName<br />
                                 Příjezd: @reservation.Arrival
                             </div>
@@ -240,7 +240,7 @@
                                         @Html.ActionLink("Upravit",
                                             "Update",
                                             "Reservations",
-                                            new { resId = reservation.Id },
+                                            new { reservationId = reservation.Id },
                                             new { @class = "nav-link odkaz-prijezd" })
                                     </div>
                                     <div class="nav-link">|</div>
@@ -248,7 +248,7 @@
                                         @Html.ActionLink("Smazat",
                                             "Delete",
                                             "Reservations",
-                                            new { resId = reservation.Id },
+                                            new { reservationId = reservation.Id },
                                             new { @class = "nav-link odkaz-prijezd js-delete",
                                                 @onclick = "return confirm('Opravdu chcete rezervaci zrušit?')"
                                             })
@@ -269,7 +269,7 @@
                         <div class="row alert alert-warning">
                             <div class="alert-prijezd">
                                 SPZ: @reservation.CarLicensePlate<br />
-                                <div class="js-pPlacePrijezd">Místo: @reservation.ParkingPlaceName<br /></div>
+                                <div class="js-parkingPlacePrijezd">Místo: @reservation.ParkingPlaceName<br /></div>
                                 Host: @reservation.CarGuestsName<br />
                                 Příjezd: @reservation.Arrival
                             </div>
@@ -293,7 +293,7 @@
                                         @Html.ActionLink("Upravit",
                                              "Update",
                                              "Reservations",
-                                             new { resId = reservation.Id },
+                                             new { reservationId = reservation.Id },
                                              new { @class = "nav-link odkaz-prijezd" })
                                     </div>
                                     <div class="nav-link">|</div>
@@ -301,7 +301,7 @@
                                         @Html.ActionLink("Smazat",
                                              "Delete",
                                              "Reservations",
-                                             new { resId = reservation.Id },
+                                             new { reservationId = reservation.Id },
                                                  // kontrola zda nejde o docasne vyjetou rezervaci
                                                  (reservation.StateOfReservationId == 5) ?
                                                      new { @class = "nav-link odkaz-prijezd disabled", @onclick = "javascript:return false;" } :
@@ -313,7 +313,7 @@
                                         @Html.ActionLink("Check In",
                                              "CheckIn",
                                              "Parking",
-                                             new { pPlaceId = reservation.ParkingPlaceId,
+                                             new { parkingPlaceId = reservation.ParkingPlaceId,
                                                  reservationId = reservation.Id }, (reservation.ParkingPlaceName == "Nepřiřazeno") ?
                                                      new { @class = "nav-link odkaz-prijezd disabled", @onclick = "javascript:return false;" }
                                                      : (object)new { @class = "nav-link odkaz-prijezd",
@@ -336,7 +336,7 @@
                         <div class="row alert alert-primary">
                             <div class="alert-prijezd">
                                 SPZ: @reservation.CarLicensePlate<br />
-                                <div class="js-pPlacePrijezd">Místo: @reservation.ParkingPlaceName<br /></div>
+                                <div class="js-parkingPlacePrijezd">Místo: @reservation.ParkingPlaceName<br /></div>
                                 Host: @reservation.CarGuestsName<br />
                                 Příjezd: @reservation.Arrival
                             </div>
@@ -365,7 +365,7 @@
                                         @Html.ActionLink("Upravit",
                                            "Update",
                                            "Reservations",
-                                           new { resId = reservation.Id },
+                                           new { reservationId = reservation.Id },
                                            new { @class = "nav-link odkaz-prijezd" })
                                     </div>
                                     <div class="nav-link">|</div>
