--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -40,9 +40,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
         <div class="card">
             @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[23])
@@ -55,11 +55,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
         <div class="card">
             @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[26])
@@ -72,9 +72,9 @@
         <div class="card">
             @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[20])
         </div>
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
-        <div class="parkovaciMistoPrazdne">
+        <div class="emptyParkingPlace">
         </div>
         <div class="card">
             @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[27])
@@ -92,9 +92,9 @@
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[11])
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
             </div>
             <div class="row">
@@ -106,7 +106,7 @@
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[9])
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[0])
@@ -116,7 +116,7 @@
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[8])
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[1])
@@ -126,7 +126,7 @@
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[7])
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[2])
@@ -136,7 +136,7 @@
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[6])
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[3])
@@ -146,7 +146,7 @@
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[5])
                 </div>
-                <div class="parkovaciMistoPrazdne">
+                <div class="emptyParkingPlace">
                 </div>
                 <div class="card">
                     @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[4])
