--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -161,39 +161,39 @@
                         <div class="row">
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(0).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[0].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[0].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[0].FreePlacesCount
+                                (@Model.OccupancyNumbers[0].OccupiedByEmployeesCount)
                             </div>
                             <div class="freeParkingPlaces">
 
                                 @DateTime.Today.AddDays(1).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[1].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[1].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[1].FreePlacesCount
+                                (@Model.OccupancyNumbers[1].OccupiedByEmployeesCount)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(2).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[2].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[2].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[2].FreePlacesCount
+                                (@Model.OccupancyNumbers[2].OccupiedByEmployeesCount)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(3).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[3].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[3].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[3].FreePlacesCount
+                                (@Model.OccupancyNumbers[3].OccupiedByEmployeesCount)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(4).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[4].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[4].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[4].FreePlacesCount
+                                (@Model.OccupancyNumbers[4].OccupiedByEmployeesCount)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(5).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[5].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[5].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[5].FreePlacesCount
+                                (@Model.OccupancyNumbers[5].OccupiedByEmployeesCount)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(6).ToString("dd. MM.")<br />
-                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[6].NumberOfFreePlaces
-                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[6].NumberOfPlacesOccupiedByEmployees)
+                                @Model.OccupancyNumbers[6].FreePlacesCount
+                                (@Model.OccupancyNumbers[4].OccupiedByEmployeesCount)
                             </div>
                         </div>
                     </div>
