--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link " })
+                    @Html.ActionLink("Nová rezervace", "Create", "Reservation", null, new { @class = "nav-link " })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Přehled Rezervací", "List", "Reservations", null, new { @class = "nav-link " })
+                    @Html.ActionLink("Přehled Rezervací", "List", "Reservation", null, new { @class = "nav-link " })
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
