refactor namespace namings

--- a/HotelGarage/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/HotelGarage/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ExternalLoginConfirmationViewModel
+﻿@model HotelGarage.Core.ViewModel.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
