--- a/HotelGarage/Views/Account/ResetPassword.cshtml
+++ b/HotelGarage/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ResetPasswordViewModel
+﻿@model HotelGarage.Core.ViewModel.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
