--- a/HotelGarage/Views/Account/SendCode.cshtml
+++ b/HotelGarage/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.SendCodeViewModel
+﻿@model HotelGarage.Core.ViewModel.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
