--- a/HotelGarage/Views/Account/VerifyCode.cshtml
+++ b/HotelGarage/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.VerifyCodeViewModel
+﻿@model HotelGarage.Core.ViewModel.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
