--- a/HotelGarage/Views/Manage/ChangePassword.cshtml
+++ b/HotelGarage/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ChangePasswordViewModel
+﻿@model HotelGarage.Core.ViewModel.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
