--- a/HotelGarage/Views/Manage/Index.cshtml
+++ b/HotelGarage/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.IndexViewModel
+﻿@model HotelGarage.Core.ViewModel.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
