--- a/HotelGarage/Views/Manage/SetPassword.cshtml
+++ b/HotelGarage/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.SetPasswordViewModel
+﻿@model HotelGarage.Core.ViewModel.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
