--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.Dtos.ParkingPlaceDto
+﻿@model HotelGarage.Core.Dto.ParkingPlaceDto
 
 <div class="card-body">
     <p class="card-title">@Model.LicensePlate</p>
