--- a/HotelGarage/Views/Reservation/List.cshtml
+++ b/HotelGarage/Views/Reservation/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<HotelGarage.Core.Dtos.ReservationListDto>
+﻿@model IList<HotelGarage.Core.Dto.ReservationListDto>
 
 @{
     ViewBag.Title = "List";
