--- a/HotelGarage/Views/Account/ForgotPassword.cshtml
+++ b/HotelGarage/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ForgotPasswordViewModel
+﻿@model HotelGarage.Core.ViewModel.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
