--- a/HotelGarage/Views/Account/Register.cshtml
+++ b/HotelGarage/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.RegisterViewModel
+﻿@model HotelGarage.Core.ViewModel.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
