--- a/HotelGarage/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/HotelGarage/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ExternalLoginListViewModel
+﻿@model HotelGarage.Core.ViewModel.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
