--- a/HotelGarage/Views/Manage/AddPhoneNumber.cshtml
+++ b/HotelGarage/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.AddPhoneNumberViewModel
+﻿@model HotelGarage.Core.ViewModel.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
