--- a/HotelGarage/Views/Manage/ManageLogins.cshtml
+++ b/HotelGarage/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ManageLoginsViewModel
+﻿@model HotelGarage.Core.ViewModel.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
