--- a/HotelGarage/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/HotelGarage/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.VerifyPhoneNumberViewModel
+﻿@model HotelGarage.Core.ViewModel.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
