--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Core.ViewModels.ParkingViewModel
+﻿@model HotelGarage.Core.ViewModel.ParkingViewModel
 
 @{
     ViewBag.Title = "Náhled parkování";
@@ -303,7 +303,7 @@
                                              "Reservation",
                                              new { reservationId = reservation.Id },
                                                  // kontrola zda nejde o docasne vyjetou rezervaci
-                                                 (reservation.State == HotelGarage.Core.Models.ReservationState.TemporaryLeave) ?
+                                                 (reservation.State == HotelGarage.Core.Model.ReservationState.TemporaryLeave) ?
                                                      new { @class = "nav-link odkaz-prijezd disabled", @onclick = "javascript:return false;" } :
                                                      (object)new { @class = "nav-link odkaz-prijezd",
                                                          @onclick = "return confirm('Opravdu chcete rezervaci zrušit?')" })
